--- a/django-models/LibraryProject/relationship_app/templates/admin_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/admin_view.html
@@ -5,7 +5,7 @@ def is_admin()
 admin_view = user_passes_test(is_admin)(admin_view)
 def admin_view(request)
 #your view logic
-return render(*args,*kwargs)
+return render(relationship_app/admin_view.html)
 
 @receiver(post_save,sender=User)
 def create_user_profile(sender,instance,created,**kwargs):
