--- a/django-models/LibraryProject/relationship_app/templates/admin_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/admin_view.html
@@ -2,7 +2,7 @@
 def is_admin()
   #test logic
 @users_passes_test(admin_test)
-admin_view = user_passes_test(is_admin)(admin_view)
+admin_view = user_passes_test(is_admin)(admin_view.html)
 def admin_view(request)
 #your view logic
 return render(relationship_app/admin_view.html)
