--- a/django_blog/templates/login.html
+++ b/django_blog/templates/login.html
@@ -1,1 +1,9 @@
-
+<h1>Login</h1>
+<from method="post">
+  {% csrf_token %}
+  <label>Username:</label>
+  <input type="text" name="username"><br><br>
+  <label>Password:</label>
+  <input type="password" name="password"><br><br>
+  <input type="submit" value="Login">
+</from>
